# constexpr_mandelbrot

./: CMakeLists.txt  LICENSE  README.md  bootstrap.sh
src/: main.cpp  mandel.h  mandel1.cpp  mandel2.cpp  mandel3.cpp  mandel4.cpp  rescale.h
